--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -71,7 +71,8 @@
   }
   .description {
     margin-left: 2 rem;
-    width: 80%;
+    padding-left: 2rem;
+    width: 70%;
     font-size: 0.8rem;
   }
 }
